--- a/styles.css
+++ b/styles.css
@@ -1,57 +1,99 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway+Dots&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap');
+
+
 * {
 box-sizing: border-box;
 margin: 0;
 padding: 0;
-
 }
 
 body {
     display: inline;
+    background-image: url("sources/img/building-interior-books-library-knowledge-shelves-72435-wallhere.com.jpg");
+    opacity: 0,5;
+    background-size: cover;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: beige;
     box-sizing: border-box;
     background-position: center;
+    color: antiquewhite;
 
 }
 
 header {
+    display: flex;
+    flex-wrap: wrap;
     background-color: rgb(70, 41, 3);
     color: beige;
-    padding: 0;
+    padding: 10px;
     position: sticky;
     text-align: center;
+    justify-content: space-between;
+    height: 25vh ;
+}
 
+.logo {
+    height: 100px;
+    width: 100px;
+    background-image: url(/sources/img/todasLasHojas.png);
+    background-size: cover;
+    position: relative;
+    top: 1rem;
+    left: 1rem;
+
+}
+
+.material-symbols-outlined {
+    display: none;
 }
 
 nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 auto;
-    text-decoration: none;
-    
+    margin: 10PX;
 }
 
+
+
 ul  {
-    
+    margin: 5%;
     display: flex;
-    justify-content: center;
+    list-style: none;    
 }
 
 ul a {
+    margin: 10px;
     color: beige;
-
+    text-decoration: none;
+    transition: color 0.4s;
 }
 
 .material-symbols-outlined {
   font-variation-settings:
   'FILL' 0,
-  'wght' 400,
+  'wght' 800,
   'GRAD' 0,
   'opsz' 24
 }
 
+main {
+    display: flex;
+    justify-self: center;
+    justify-content: center;
+}
 
+.lema {
+font-family: inherit;
+
+}
+
+.marca {
+    font-family: "Nothing You Could Do", cursive;
+    font-weight: 800;
+    font-style: oblique;
+    font-size: 2em;
+}
 
 .container {
     display: grid;
@@ -66,8 +108,48 @@ ul a {
     text-align: center;
 }
 
+/* seccion de formunlario */
+
+fieldset {
+    display: block;
+    width: 300px;
+    height: 400px;
+    justify-content: center;
+    border-radius: 10px;
+    background-color: beige;
+    opacity: 0,5;
+}
+
+
+/* seccion de footer para todas las paginas */
+
 footer {
+    height: 30vh;
+    top: 45vh;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    position: relative;
     background-color: rgb(70, 41, 3);
     color: beige;
-
+    padding: 1rem;
 }
+
+footer section h3 {
+    margin-bottom: 1em;
+}
+
+footer section p {
+    margin-bottom: 0.2em;
+}
+
+#copy {
+    margin: 2em 0;
+}
+
+#autor {
+    margin: 2em 0;
+    font-family: "Raleway Dots", sans-serif;
+    font-size: small;
+    font-weight: 400;
+    font-style: normal;
+}
+  
